Remove distance param from filename, update min_distance and max_distance param

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,9 +1,9 @@
 params {
     //global
-    output = "/data/crone/guide_design/data/test_output"
+    output = "/data/crone/guide_design/data/output4"
     //parallel_chopchop
     bedfile = "${projectDir}/test/48_targets.bed"
-    flank = 500
+    flank = 100
     distance = 4000
     threads = 8
     chopchop_path = "/data/crone/guide_design/repo/chopchop/chopchop.py" 
@@ -13,9 +13,9 @@ params {
     max_gc = 80
     max_self_complementarity = 0
     min_efficiency_score = 0.3
-    max_mm0 = 0
-    max_mm1 = 1
-    max_mm2 = 1
+    max_mm0 = 1
+    max_mm1 = 2
+    max_mm2 = 2
     max_mm3 = 10
     filter_chopchop_path = "${projectDir}/scripts/filter_chopchop.py"
     //parallel_crispron
@@ -25,6 +25,9 @@ params {
     //filter_crispron
     filter_crispron_path = "${projectDir}/scripts/filter_crispron.py"
     score_threshold = 10
+    //select_candidate_guides
+    targets_bed="${projectDir}/test/48_targets.bed"
+    select_candidate_guides_path = "${projectDir}/scripts/select_candidate_guides.py"
 }
 
 conda.enabled = true
